//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Post {
  id String [pk]
  slug String [unique, not null]
  title String [not null]
  content String
  thumbnail String
  published Boolean [not null, default: false]
  author User
  authorId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Account {
  id Int [pk, increment]
  userId Int [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  oauth_token_secret String
  oauth_token String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id Int [pk, increment]
  sessionToken String [unique, not null]
  userId Int [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  posts Post [not null]
  accounts Account [not null]
  sessions Session [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Ref: Post.authorId > User.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]